<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingRight="50dp"
    android:paddingLeft="50dp"
    android:paddingBottom="80dp"
    tools:context="com.example.abeeb.alat.activities.MainActivity">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:layout_weight="2"
        android:layout_gravity="end"
        android:contentDescription="Vector Asset"
        android:src="@drawable/support"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="150dp"
        android:layout_weight="3.5"
        android:contentDescription="@string/alat_logo"
        android:src="@drawable/white_logo2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/sign_up"
        android:background="@drawable/rounded_button"
        android:textColor="@color/dark_wine"
        android:layout_weight="0.3"
        android:textSize="@dimen/login_btn_size"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textAllCaps="false"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:textSize="@dimen/login_btn_size"
        android:textColor="@color/white"
        android:background="@drawable/gradient"
        android:layout_weight="0.3"
        android:textAlignment="center"
        android:textAllCaps="false"/>


</LinearLayout>
