<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingRight="50dp"
    android:paddingLeft="50dp"
    android:paddingBottom="80dp"
    tools:context="com.example.abeeb.alat.activities.RegisterActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="5"
            android:contentDescription="Vector Asset"
            android:scaleType="center"
            android:src="@drawable/white_logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_weight="5"
            android:contentDescription="Vector Asset"
            android:scaleType="matrix"
            android:src="@drawable/support" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/register1a"
        android:textSize="50sp"
        android:layout_marginTop="70dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/register1b"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/country_code"
            android:inputType="number"
            android:layout_marginBottom="50dp"
            android:textColor="@color/white"
            android:freezesText="true"
            android:id="@+id/country_code"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginBottom="50dp"
            android:textColor="@color/white"
            android:freezesText="true"
            android:id="@+id/phone_number"/>

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register1c"
        android:id="@+id/start"
        android:background="@drawable/rounded_button"
        android:textColor="@color/dark_wine"
        android:textSize="@dimen/login_btn_size"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textAllCaps="false"/>

</LinearLayout>
